# perfect-lurker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: gen-changie-command.yml
demo/: __init__.py  main_test.py
src/perfectlurker/: __init__.py  events.py  eventstream.py  field.py  lurker.py  lurkergang.py
tests/: __init__.py  conftest.py  eventstream_test.py  field_test.py  lurker_test.py  lurkergang_test.py
